--- a/sites/funmooc/src/frontend/scss/components/_subheader.scss
+++ b/sites/funmooc/src/frontend/scss/components/_subheader.scss
@@ -96,7 +96,7 @@ $r-subheader-search-title-width: 19rem !default; // aligned on computed search r
   // Main subheader container alongside 'aside' container
   &__main {
     @include media-breakpoint-up(lg) {
-      @include sv-flex(1, 0, 75%);
+      @include sv-flex(1, 0, 60%);
       display: flex;
       justify-content: flex-start;
       align-content: flex-start;
@@ -108,11 +108,11 @@ $r-subheader-search-title-width: 19rem !default; // aligned on computed search r
   // Main content with possible categories
   &__content {
     margin-top: 1rem;
-    padding: 0.5rem 0;
+    padding: 0.5rem;
     font-size: 1rem;
 
     @include media-breakpoint-up(lg) {
-      @include sv-flex(1, 0, 75%);
+      @include sv-flex(1, 0, 100%);
       margin-top: 1.5rem;
     }
 
@@ -130,7 +130,7 @@ $r-subheader-search-title-width: 19rem !default; // aligned on computed search r
     text-align: center;
 
     @include media-breakpoint-up(lg) {
-      @include sv-flex(1, 0, 25%);
+      @include sv-flex(1, 0, 32%);
     }
   }
 
@@ -143,7 +143,7 @@ $r-subheader-search-title-width: 19rem !default; // aligned on computed search r
     }
 
     @include media-breakpoint-up(lg) {
-      @include sv-flex(1, 0, 32%);
+      @include sv-flex(1, 0, 40%);
       margin-top: 1.5rem;
     }
 
@@ -159,7 +159,7 @@ $r-subheader-search-title-width: 19rem !default; // aligned on computed search r
   &__cartouche {
     display: block;
     width: 80%;
-    margin: 0 auto;
+    margin: 0.5rem auto;
     color: inherit;
 
     &:hover {
